modo oscuro again baby

--- a/index.html
+++ b/index.html
@@ -1,14 +1,4 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>CodePen - menú desplegable</title>
-  <link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -29,17 +19,13 @@
             <li><a href="#">Merlina</a></li>
             <!-- Agrega más enlaces según sea necesario -->
         </ul>
+        <button id="modoBoton">Modo oscuro</button> <!-- Botón de cambio de modo -->
     </div>
 
     <div class="content">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vel justo odio. Phasellus ultricies lacus a varius.</p>
     </div>
-    
-    <script src="script.js"></script>
-</body>
-</html>
-<!-- partial -->
-  <script  src="./script.js"></script>
 
+    <script src="script.js"></script>
 </body>
 </html>
