--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="es" >
 <head>
   <meta charset="UTF-8">
   <title>CodePen - menú desplegable</title>
   <link rel="stylesheet" href="./style.css">
-
 </head>
 <body>
-<!-- partial:index.partial.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -31,16 +29,10 @@
         </ul>
         <button id="modoBoton">Modo oscuro</button> <!-- Botón de cambio de modo -->
     </div>
-
     <div class="content">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vel justo odio. Phasellus ultricies lacus a varius.</p>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
-<!-- partial -->
-  <script  src="./script.js"></script>
 
-</body>
-</html>
